# agent-flux

./: .cursorrules  .gitignore  LICENSE  README.md  VERIFICATION.md  WALKTHROUGH.md  docker-compose.yml
.cursor/rules/: subagent-workflows.mdc
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  demo_cache.py  main.py
backend/app/cycle/: completion_report.py  orchestrator.py
backend/app/llm/: vultr.py
backend/app/session/: store.py
backend/app/tools/: deterministic.py  llm_tools.py
backend/app/trace/: events.py
backend/demo_cache/: cycle_demo.json
backend/scripts/: check_models.py
backend/tests/: test_api.py  test_completion_report.py  test_cycle.py  test_llm_tools.py  test_plan_approval.py  test_supervisor_redirect.py  test_tools.py  test_vultr.py
backend/tests/fixtures/: brief.txt
docs/: build_order.md  product.md
framework-docs/: 01-core-concepts.md  02-the-flux-cycle.md  03-roles.md  04-supervision-and-trust.md  05-case-studies.md  06-adoption-and-metrics.md  07-where-agile-breaks.md  08-transition-guide.md  README.md
frontend/: .dockerignore  .env.example  Dockerfile  design.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BoundaryReview.tsx  CompletionReportPanel.tsx  ContractPanel.tsx  ErrorBanner.tsx  Escalation.tsx  FluxStepper.tsx  PlanApprovalCard.tsx  StepToast.tsx  TracePanel.tsx  Upload.tsx  ValidationPanel.tsx
frontend/lib/: downloadFile.ts
frontend/lib/api/: client.ts
local/: DESARROLLO.md  PRODUCTO.md
scripts/: dev.sh
(+15 files in other folders)
